# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.1
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='team-detail',route='api/projects/%28%3FP%3Cid%3E%5B%5E/.%5D%2B%29/%3F%24'*/
  '
---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.2
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_organizationmembership"."user_id" = 2 /*controller='team-detail',route='api/projects/%28%3FP%3Cid%3E%5B%5E/.%5D%2B%29/%3F%24'*/
  '
---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.3
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:RATE_LIMIT_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='team-detail',route='api/projects/%28%3FP%3Cid%3E%5B%5E/.%5D%2B%29/%3F%24'*/
  '
---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.4
  '
  SELECT (1) AS "a"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."team_id" = 2
  LIMIT 1 /*controller='team-detail',route='api/projects/%28%3FP%3Cid%3E%5B%5E/.%5D%2B%29/%3F%24'*/
  '
---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.5
  '
  SELECT "posthog_asyncmigration"."id",
         "posthog_asyncmigration"."name",
         "posthog_asyncmigration"."description",
         "posthog_asyncmigration"."progress",
         "posthog_asyncmigration"."status",
         "posthog_asyncmigration"."current_operation_index",
         "posthog_asyncmigration"."current_query_id",
         "posthog_asyncmigration"."celery_task_id",
         "posthog_asyncmigration"."started_at",
         "posthog_asyncmigration"."finished_at",
         "posthog_asyncmigration"."posthog_min_version",
         "posthog_asyncmigration"."posthog_max_version",
         "posthog_asyncmigration"."parameters"
  FROM "posthog_asyncmigration"
  WHERE ("posthog_asyncmigration"."name" = '0007_persons_and_groups_on_events_backfill'
         AND "posthog_asyncmigration"."status" = 2)
  ORDER BY "posthog_asyncmigration"."id" ASC
  LIMIT 1 /*controller='team-detail',route='api/projects/%28%3FP%3Cid%3E%5B%5E/.%5D%2B%29/%3F%24'*/
  '
---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.6
  '
  SELECT "posthog_asyncmigration"."id",
         "posthog_asyncmigration"."name",
         "posthog_asyncmigration"."description",
         "posthog_asyncmigration"."progress",
         "posthog_asyncmigration"."status",
         "posthog_asyncmigration"."current_operation_index",
         "posthog_asyncmigration"."current_query_id",
         "posthog_asyncmigration"."celery_task_id",
         "posthog_asyncmigration"."started_at",
         "posthog_asyncmigration"."finished_at",
         "posthog_asyncmigration"."posthog_min_version",
         "posthog_asyncmigration"."posthog_max_version",
         "posthog_asyncmigration"."parameters"
  FROM "posthog_asyncmigration"
  WHERE ("posthog_asyncmigration"."name" = '0007_persons_and_groups_on_events_backfill'
         AND "posthog_asyncmigration"."status" = 2)
  ORDER BY "posthog_asyncmigration"."id" ASC
  LIMIT 1 /*controller='team-detail',route='api/projects/%28%3FP%3Cid%3E%5B%5E/.%5D%2B%29/%3F%24'*/
  '
---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.7
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21
  '
---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.8
  '
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."active"
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."team_id" = 2)
  '
---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.9
  '
  SELECT "posthog_pluginconfig"."id",
         "posthog_pluginconfig"."web_token",
         "posthog_pluginsourcefile"."updated_at",
         "posthog_plugin"."updated_at",
         "posthog_pluginconfig"."updated_at"
  FROM "posthog_pluginconfig"
  INNER JOIN "posthog_plugin" ON ("posthog_pluginconfig"."plugin_id" = "posthog_plugin"."id")
  INNER JOIN "posthog_pluginsourcefile" ON ("posthog_plugin"."id" = "posthog_pluginsourcefile"."plugin_id")
  WHERE ("posthog_pluginconfig"."enabled"
         AND "posthog_pluginsourcefile"."filename" = 'site.ts'
         AND "posthog_pluginsourcefile"."status" = 'TRANSPILED'
         AND "posthog_pluginconfig"."team_id" = 2)
  '
---
# name: TestDecide.test_web_app_queries
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestDecide.test_web_app_queries.1
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='team-detail',route='api/projects/%28%3FP%3Cid%3E%5B%5E/.%5D%2B%29/%3F%24'*/
  '
---
# name: TestDecide.test_web_app_queries.2
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_organizationmembership"."user_id" = 2 /*controller='team-detail',route='api/projects/%28%3FP%3Cid%3E%5B%5E/.%5D%2B%29/%3F%24'*/
  '
---
# name: TestDecide.test_web_app_queries.3
  '
  SELECT (1) AS "a"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."team_id" = 2
  LIMIT 1 /*controller='team-detail',route='api/projects/%28%3FP%3Cid%3E%5B%5E/.%5D%2B%29/%3F%24'*/
  '
---
# name: TestDecide.test_web_app_queries.4
  '
  SELECT "posthog_asyncmigration"."id",
         "posthog_asyncmigration"."name",
         "posthog_asyncmigration"."description",
         "posthog_asyncmigration"."progress",
         "posthog_asyncmigration"."status",
         "posthog_asyncmigration"."current_operation_index",
         "posthog_asyncmigration"."current_query_id",
         "posthog_asyncmigration"."celery_task_id",
         "posthog_asyncmigration"."started_at",
         "posthog_asyncmigration"."finished_at",
         "posthog_asyncmigration"."posthog_min_version",
         "posthog_asyncmigration"."posthog_max_version",
         "posthog_asyncmigration"."parameters"
  FROM "posthog_asyncmigration"
  WHERE ("posthog_asyncmigration"."name" = '0007_persons_and_groups_on_events_backfill'
         AND "posthog_asyncmigration"."status" = 2)
  ORDER BY "posthog_asyncmigration"."id" ASC
  LIMIT 1 /*controller='team-detail',route='api/projects/%28%3FP%3Cid%3E%5B%5E/.%5D%2B%29/%3F%24'*/
  '
---
# name: TestDecide.test_web_app_queries.5
  '
  SELECT "posthog_asyncmigration"."id",
         "posthog_asyncmigration"."name",
         "posthog_asyncmigration"."description",
         "posthog_asyncmigration"."progress",
         "posthog_asyncmigration"."status",
         "posthog_asyncmigration"."current_operation_index",
         "posthog_asyncmigration"."current_query_id",
         "posthog_asyncmigration"."celery_task_id",
         "posthog_asyncmigration"."started_at",
         "posthog_asyncmigration"."finished_at",
         "posthog_asyncmigration"."posthog_min_version",
         "posthog_asyncmigration"."posthog_max_version",
         "posthog_asyncmigration"."parameters"
  FROM "posthog_asyncmigration"
  WHERE ("posthog_asyncmigration"."name" = '0007_persons_and_groups_on_events_backfill'
         AND "posthog_asyncmigration"."status" = 2)
  ORDER BY "posthog_asyncmigration"."id" ASC
  LIMIT 1 /*controller='team-detail',route='api/projects/%28%3FP%3Cid%3E%5B%5E/.%5D%2B%29/%3F%24'*/
  '
---
# name: TestDecide.test_web_app_queries.6
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21
  '
---
# name: TestDecide.test_web_app_queries.7
  '
  SELECT "posthog_pluginconfig"."id",
         "posthog_pluginconfig"."web_token",
         "posthog_pluginsourcefile"."updated_at",
         "posthog_plugin"."updated_at",
         "posthog_pluginconfig"."updated_at"
  FROM "posthog_pluginconfig"
  INNER JOIN "posthog_plugin" ON ("posthog_pluginconfig"."plugin_id" = "posthog_plugin"."id")
  INNER JOIN "posthog_pluginsourcefile" ON ("posthog_plugin"."id" = "posthog_pluginsourcefile"."plugin_id")
  WHERE ("posthog_pluginconfig"."enabled"
         AND "posthog_pluginsourcefile"."filename" = 'site.ts'
         AND "posthog_pluginsourcefile"."status" = 'TRANSPILED'
         AND "posthog_pluginconfig"."team_id" = 2)
  '
---
